--- a/config.org
+++ b/config.org
@@ -1089,36 +1089,86 @@ Thank you to [[https://github.com/purcell/emacs.d/blob/master/lisp/init-elpa.el]
 
 * training helpers
 #+BEGIN_SRC emacs-lisp
-  (defvar *js/bar-weight* 20
+  (defvar barbell-bar-weight 20
     "Weight in kilograms of barbell.")
-  (defvar *js/plate-inventory* '(25 20 15 10 5 2.5 1)
+  (defvar barbell-plate-inventory '(25 20 15 10 5 2.5 1)
     "Inventory of plates in kilograms.  Assumes plates as pairs.")
 
-  (defun js/barbell-load (load)
+  (defun barbell--load (load)
     "Generate a list of plates from the given LOAD."
-    (let ((load (- load *js/bar-weight*))
-          (available (sort *js/plate-inventory* '>))
+    (let ((load (- load barbell-bar-weight))
+          (available (sort barbell-plate-inventory '>))
           (result))
-      (when (= 0
+      (if (= 0
                (dolist (current available load)
                  (when (>= load (* 2 current))
                    (setq load (- load (* 2 current)))
                    (setq result (cons current result)))))
-        (reverse result))))
+          (reverse result)
+        (user-error "%s" "Impossible load"))))
 
 
-  (defun js/barbell (load-string)
+  (defun barbell-load (load-string)
     "Convert LOAD-STRING to the representation of the plates on the bar."
     (interactive (let ((number-at-point (thing-at-point 'number)))
                    (list (read-string "Load: "
                                       (when number-at-point
                                         (number-to-string number-at-point))))))
     (let* ((load (string-to-number load-string))
-           (result (js/barbell-load load)))
+           (result (barbell--load load)))
       (message (format "%s kg (%d lbs) %s" load (* 2.2 load)
-                       (seq-reduce (lambda (x y)
+                       (if result
+                           (seq-reduce (lambda (x y)
                                      (format "%s--%s" x y))
-                                   result "")))))
+                                       result "")
+                         "--")))))
+
+  ;; this is probably the wrong structure
+
+  (defvar barbell-weeks
+    '(1 ((0.65 1 5) (0.75 1 5) (0.85 1 "5+"))
+        2 ((0.70 1 3) (0.80 1 3) (0.90 1 "5+"))
+        3 ((0.75 1 5) (0.85 1 3) (0.95 1 "1+"))
+        4 ((0.40 1 5) (0.50 1 5) (0.60 1 5))))
+
+  (defvar barbell-warmup
+    '((.4 1 5) (.5 1 5) (.6 1 5)))
+
+  (defvar barbell-accessory
+    '((.35 5 10)))
+
+  (defvar barbell-exercise-accessory-map
+    '(("squat" . "pullups fat oh") ("press" . "pullups fat uh")
+      ("deadlift" . "pullups skinny oh") ("bench" . "pullups skinny uh")))
+
+  (defun barbell-insert-training-log (base-weight exercise current-week)
+    (interactive "nBase weight: \nsExercise: \nnCurrent week: ")
+    (insert (format-time-string "\n* [%Y-%m-%d %a]\n"))
+    (barbell--process-group "warmup" exercise barbell-warmup base-weight)
+    (barbell--process-group
+     (format "%s base = %s kg 1RM ~= %s kg" exercise base-weight (barbell--ceiling (/ base-weight 0.9) 5))
+     exercise (plist-get barbell-weeks current-week) base-weight)
+    (barbell--process-group "accessory" exercise barbell-accessory base-weight)
+    (insert (format "+ %s %sx%s\n" (alist-get exercise barbell-exercise-accessory-map nil nil 'string=) 3 10))
+    (insert "** computed 1RM ="))
+
+
+  (defun barbell--process-group (group exercise program weight)
+    (insert (format "** %s\n" group))
+    (dolist (s program)
+      (insert (format "+ %s " exercise))
+      (seq-let [percent sets reps] s
+        (let* ((load (barbell--ceiling (* weight percent) 5))
+               (load-string (barbell-load (number-to-string load))))
+          (insert (format "%sx%s %s\n" sets reps load-string))))))
+
+
+  (defun barbell--ceiling (n to)
+    (* (ceiling (/ n to)) to))
+
+  (defun barbell-compute-1RM (weight reps)
+    (interactive "nWeight: \nnReps: ")
+    (message "%s" (+ (* weight reps 0.0333) weight)))
 #+END_SRC
 
 * git interface
