--- a/config.org
+++ b/config.org
@@ -1125,21 +1125,10 @@ Thank you to [[https://github.com/purcell/emacs.d/blob/master/lisp/init-elpa.el]
 
   ;; this is probably the wrong structure
 
-  (defvar barbell-weeks
-    '(1 ((0.65 1 5) (0.75 1 5) (0.85 1 "5+"))
-        2 ((0.70 1 3) (0.80 1 3) (0.90 1 "5+"))
-        3 ((0.75 1 5) (0.85 1 3) (0.95 1 "1+"))
-        4 ((0.40 1 5) (0.50 1 5) (0.60 1 5))))
-
-  (defvar barbell-warmup
-    '((.4 1 5) (.5 1 5) (.6 1 5)))
-
-  (defvar barbell-accessory
-    '((.35 5 10)))
-
-  (defvar barbell-exercise-accessory-map
-    '(("squat" . "pullups fat oh") ("press" . "pullups fat uh")
-      ("deadlift" . "pullups skinny oh") ("bench" . "pullups skinny uh")))
+  (defvar barbell-weeks)
+  (defvar barbell-warmup)
+  (defvar barbell-accessory)
+  (defvar barbell-exercise-accessory-map)
 
   (defun barbell-insert-training-log (base-weight exercise current-week)
     (interactive "nBase weight: \nsExercise: \nnCurrent week: ")
