--- a/config.org
+++ b/config.org
@@ -1177,6 +1177,8 @@ Xah Lee has a [[http://xahlee.info/linux/linux_xmodmap_tutorial.html][tutorial]]
 
 * launch work setup
 
+Run ispell last  
+
 #+BEGIN_SRC emacs-lisp
   (defun js/go-to-work ()
     (interactive)
@@ -1186,8 +1188,8 @@ Xah Lee has a [[http://xahlee.info/linux/linux_xmodmap_tutorial.html][tutorial]]
     (calc)
     (sql-connect "engineering")
     (sql-connect "customer_service")
-    (ispell)
     (add-to-list 'org-capture-templates
                '("j" "log HMF listing" plain (file "~/org/js_list.org")
-                 "%t --- %(insert-register ?j)%?")))
+                 "%t --- %(insert-register ?j)%?"))
+    (ispell))
 #+END_SRC
