--- a/config.org
+++ b/config.org
@@ -141,6 +141,7 @@ Explicitly set storage files.
 + Remove warning for narrow to region.
 + If there are two dired buffers open, copy and move default to the other one.
 + Use the same backslashes for regex isearch and re-builder.
++ Use the trash ~/.local/share/Trash/files.  C-d will delete.
 
 #+BEGIN_SRC emacs-lisp
   (setq column-number-mode t)
@@ -154,6 +155,7 @@ Explicitly set storage files.
   (put 'narrow-to-region 'disabled nil)
   (setq dired-dwim-target t)
   (setq reb-re-syntax 'string)
+  (setq delete-by-moving-to-trash t)
 #+END_SRC
 
 * font
@@ -323,7 +325,14 @@ Functions come from Harry Schwartz.  Most workflows start with one of these.
 
   (add-hook 'dired-mode-hook
             (lambda ()
-              (dired-hide-details-mode 1)))
+              (dired-hide-details-mode 1)
+              (define-key dired-mode-map (kbd "C-d")
+                (lambda (ARG)
+                  "permanantly delete file"
+                  (interactive "P")
+                  (setq delete-by-moving-to-trash nil)
+                  (dired-do-delete ARG)
+                  (setq delete-by-moving-to-trash t)))))
 
   (add-hook 'eshell-mode-hook
             (lambda ()
