--- a/config.org
+++ b/config.org
@@ -325,14 +325,7 @@ Functions come from Harry Schwartz.  Most workflows start with one of these.
 
   (add-hook 'dired-mode-hook
             (lambda ()
-              (dired-hide-details-mode 1)
-              (define-key dired-mode-map (kbd "C-d")
-                (lambda (ARG)
-                  "permanantly delete file"
-                  (interactive "P")
-                  (setq delete-by-moving-to-trash nil)
-                  (dired-do-delete ARG)
-                  (setq delete-by-moving-to-trash t)))))
+              (dired-hide-details-mode 1)))
 
   (add-hook 'eshell-mode-hook
             (lambda ()
@@ -1223,3 +1216,19 @@ Run ispell last
       (setq ivy-use-virtual-buffers t)
       (js/change-face-height js/default-font-height)))
 #+END_SRC
+
+* permanently delete from dired
+
+#+BEGIN_SRC emacs-lisp
+  (defun js-dired-do-destroy (ARG)
+      "Permanently delete all marked (or next ARG) files."
+      (interactive "P")
+      (let ((trash delete-by-moving-to-trash))
+        (setq delete-by-moving-to-trash nil)
+        (dired-do-delete ARG)
+        (setq delete-by-moving-to-trash trash)))
+
+  (add-hook 'dired-mode-hook
+            (lambda ()(define-key dired-mode-map (kbd "C-d")
+                        'js-dired-do-destroy)))
+#+END_SRC  
