--- a/config.org
+++ b/config.org
@@ -366,6 +366,7 @@ I don't want to confirm every time babel evaluates.
   (setq org-agenda-window-setup 'current-window)
   (setq org-return-follows-link t)
   (setq org-startup-folded t)
+  (setq org-adapt-indentation nil)
   (setq org-publish-project-alist
         '(("keyboard"
            :base-directory "~/notes/"
