Help refile process

--- a/config.org
+++ b/config.org
@@ -360,7 +360,8 @@ I don't want to confirm every time babel evaluates.
   (setq org-agenda-files (quote ("~/org/ephemera.org" "~/org/kanban.org" "~/org/notes.org")))
   (setq org-export-with-toc nil)
   (setq org-html-postamble nil)
-  (setq org-cycle-separator-lines 1)
+  (setq org-cycle-separator-lines 0)
+  (setq org-refile-targets '((nil . (:maxlevel . 2))))
   (setq org-confirm-babel-evaluate nil)
   (setq org-agenda-span 'day)
   (setq org-cycle-emulate-tab 'white)
