--- a/config.org
+++ b/config.org
@@ -371,6 +371,7 @@ I don't want to confirm every time babel evaluates.
   (setq org-return-follows-link t)
   (setq org-startup-folded t)
   (setq org-adapt-indentation nil)
+  (setq org-blank-before-new-entry '((heading . nil) (plain-list-item . nil)))
   (setq org-publish-project-alist
         '(("keyboard"
            :base-directory "~/notes/"
