Add TODO keywords

--- a/config.org
+++ b/config.org
@@ -373,6 +373,8 @@ I don't want to confirm every time babel evaluates.
   (setq org-adapt-indentation nil)
   (setq org-blank-before-new-entry '((heading . nil) (plain-list-item . nil)))
   (setq org-use-speed-commands t)
+  (setq org-todo-keywords
+        '((sequence "TODO" "BLOCKED" "|" "DONE")))
   (setq org-publish-project-alist
         '(("keyboard"
            :base-directory "~/notes/"
