--- a/config.org
+++ b/config.org
@@ -515,6 +515,7 @@ I don't want to confirm every time babel evaluates.
 
 #+BEGIN_SRC emacs-lisp
   (global-set-key (kbd "M-z") 'zap-up-to-char)
+  (global-set-key (kbd "C-c <DEL>") 'kill-whole-line)
 #+END_SRC
 
 * testing packages
