--- a/config.org
+++ b/config.org
@@ -516,6 +516,7 @@ I don't want to confirm every time babel evaluates.
 #+BEGIN_SRC emacs-lisp
   (global-set-key (kbd "M-z") 'zap-up-to-char)
   (global-set-key (kbd "C-c <DEL>") 'kill-whole-line)
+  (defalias 'eb 'eval-buffer)
 #+END_SRC
 
 * testing packages
