--- a/config.org
+++ b/config.org
@@ -1383,3 +1383,8 @@ Found a solution [[https://gist.github.com/samwhitlock/c4f0dd94a7c38c922c390c95a
     v2
     "');;")
 #+END_SRC
+* ediff
+#+BEGIN_SRC emacs-lisp
+  (setq ediff-split-window-function 'split-window-horizontally)
+  (setq ediff-window-setup-function 'ediff-setup-windows-plain)
+#+END_SRC
