--- a/config.org
+++ b/config.org
@@ -375,7 +375,8 @@ I don't want to confirm every time babel evaluates.
   (setq org-blank-before-new-entry '((heading . nil) (plain-list-item . nil)))
   (setq org-use-speed-commands t)
   (setq org-todo-keywords
-        '((sequence "TODO" "BLOCKED" "|" "DONE")))
+        '((sequence "TODO" "|" "DONE")
+          (sequence "BLOCKED")))
   (setq org-publish-project-alist
         '(("keyboard"
            :base-directory "~/notes/"
