--- a/config.org
+++ b/config.org
@@ -1401,3 +1401,7 @@ Found a solution [[https://gist.github.com/samwhitlock/c4f0dd94a7c38c922c390c95a
   (setq ediff-split-window-function 'split-window-horizontally)
   (setq ediff-window-setup-function 'ediff-setup-windows-plain)
 #+END_SRC
+* python
+#+BEGIN_SRC emacs-lisp
+  (setq python-shell-interpreter "python")
+#+END_SRC
