--- a/config.org
+++ b/config.org
@@ -1405,3 +1405,11 @@ Found a solution [[https://gist.github.com/samwhitlock/c4f0dd94a7c38c922c390c95a
 #+BEGIN_SRC emacs-lisp
   (setq python-shell-interpreter "python")
 #+END_SRC
+* scanner
+#+BEGIN_SRC emacs-lisp
+  (defun js/scan ()
+    "Run shell script to mount drive, move images, and open dired."
+    (shell-command-to-string "scanner.sh")
+    (message "convert * filename.pdf")
+    (dired "~/scans"))
+#+END_SRC
