--- a/exwm.org
+++ b/exwm.org
@@ -36,5 +36,6 @@ Thank you [[https://github.com/daedreth/UncleDavesEmacs][Uncle Dave]] for this. 
 
 * display time in mode line
 #+BEGIN_SRC emacs-lisp :tangle yes
+  (setq display-time-day-and-date t)
   (display-time-mode 1)
 #+END_SRC
