--- a/config.org
+++ b/config.org
@@ -1388,5 +1388,6 @@ Found a solution [[https://gist.github.com/samwhitlock/c4f0dd94a7c38c922c390c95a
 * display time in mode line
 #+BEGIN_SRC emacs-lisp
   (setq display-time-day-and-date t)
+  (setq display-time-default-load-average nil)
   (display-time-mode 1)
 #+END_SRC
